# ChangeLog for app-office/orage
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
  Add USE=berkdb

  04 Aug 2008; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
  Removed unneeded libxfce4mcs dependency

  28 Jun 2008; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
  Removed old xfcalendar blocker

  23 Dec 2007; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
  Moved MY_PN before inherit as we need it in the eclass

  02 Dec 2007; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
  Added a note about migration from 4.4 to 4.5

  29 Sep 2007; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
  Added dodoc

  29 Jun 2007; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
  Removed deprecated dependency on <dbus-1

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
