@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST orage-4.5.92.tar.bz2 1913199 RMD160 fcf8af5f6135d79e99164c76fceba4cd771b4ab0 SHA1 645d2945a668e6ce257ab7a01dfc7868d8dc0aa8 SHA256 34192bbb2261af54777257274fe01c638ccfc11b26cd5ed6e28226ecf8388778
-EBUILD orage-4.5.92.ebuild 975 RMD160 f6b15f3b9ff7418e0d39af34b4de99a9d42b52f1 SHA1 27b042a18655280e7b916aad1d5361f2b8ad707d SHA256 109ce079be16d41f38b01f057e9408012ff18606f59bd9fc6f1ee9fdfa404a3f
-EBUILD orage-9999.ebuild 994 RMD160 5852305fc3c210d15885cb01063095d3c5e85dbf SHA1 39a174034dac2e290d83c17e9b20a8d4c352c8f4 SHA256 80795e23f955ad240043c37c1713d93e08e58afe78b031e870e26780d6f47dbd
-MISC ChangeLog 958 RMD160 ebe7acf84456bdf5c97030fd3e43831c782ce023 SHA1 d6c0bb76e25f7f8e0cb67b4ac504c8cd06e558f3 SHA256 f0b9247b0de3ac511be400a9becf1910ac724b5ed7a4f984811d3f0b3ce14c57
+EBUILD orage-4.5.92.ebuild 993 RMD160 7a989566c77bd6f251ef9657827ec1483c0c4825 SHA1 67178572287100936b011a128f5e631fd83791e1 SHA256 3b9b95367f800cfbce756f5ff55e7cd04a924eef31ebc94ae2c6bb0dfd26e406
+EBUILD orage-9999.ebuild 1012 RMD160 979a45e141897a447bce544171f1e8f50957f420 SHA1 bd5138aef125584aa6d8b79582febd68144ad693 SHA256 38b053e4f031510e801f2b5f98ae5f3bfa10cad9b9111e26128cba3d5a969f71
+MISC ChangeLog 1086 RMD160 777f87a8f4881d1b89f91987b25a475901e0b2ca SHA1 31433f535f0714c01ee9161061cd5686009c01c3 SHA256 fed940124598cd18a3a16035e25d318cef11b46147d81b42c3f420e64336733d
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdtVkACgkQKhnDs22gwa+euQCgjIfwQ2+7Cb0ktd+GwAVUeAEl
-D94An0xNPD57pyV68ECRBLrPuVp5Fb6/
-=POJ+
+iEYEARECAAYFAkkhtWkACgkQKhnDs22gwa8ZJwCg1IvOKdObey80FQiYy/z0UtQs
+s7cAoN6DsWRWBQRLlro5J7vyiRnfPthI
+=2VNv
 -----END PGP SIGNATURE-----
