@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Nov 2008; Christoph Mende <angelos@gentoo.org> orage-4.5.92.ebuild,
+  orage-9999.ebuild:
+  Moved XFCE_CONFIG to pkg_setup
+
   09 Nov 2008; Christoph Mende <angelos@gentoo.org> orage-9999.ebuild:
   Add USE=berkdb
 
